switch to rune.js from external source

--- a/sample/index.html
+++ b/sample/index.html
@@ -38,7 +38,7 @@
         <script type="text/javascript" src="node_modules/vivus/dist/vivus.min.js"></script>
         <script>less = { env: "development", logLevel: 0 };</script>
         <script type="text/javascript" src="node_modules/less/dist/less.min.js"></script>
-        <script type="text/javascript" src="rune.js"></script>
+        <script type="text/javascript" src="node_modules/runejs/rune.js"></script>
         <link rel="stylesheet" type="text/css" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
         <script type="text/javascript" src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
     </head>
