--- a/sample/index.html
+++ b/sample/index.html
@@ -41,6 +41,8 @@
         <script type="text/javascript" src="node_modules/runejs/rune.js"></script>
         <link rel="stylesheet" type="text/css" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
         <script type="text/javascript" src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="node_modules/typopro-web/web/TypoPRO-SourceSansPro/TypoPRO-SourceSansPro.css">
+        <link rel="stylesheet" type="text/css" href="node_modules/typopro-web/web/TypoPRO-FiraSans/TypoPRO-FiraSans.css">
     </head>
     <body>
         <div id="hud">
