switch to SVG.js to be able to correctly animate with Anime.js

--- a/sample/index.html
+++ b/sample/index.html
@@ -39,6 +39,11 @@
         <script>less = { env: "development", logLevel: 0 };</script>
         <script type="text/javascript" src="node_modules/less/dist/less.min.js"></script>
         <script type="text/javascript" src="node_modules/runejs/rune.js"></script>
+        <script type="text/javascript" src="node_modules/@svgdotjs/svg.js/dist/svg.min.js"></script>
+        <script type="text/javascript" src="node_modules/@svgdotjs/svg.filter.js/dist/svg.filter.min.js"></script>
+        <script type="text/javascript" src="node_modules/svg.path.js/svg.path.js"></script>
+        <script type="text/javascript" src="node_modules/svg.easing.js/dist/svg.easing.min.js"></script>
+        <script type="text/javascript" src="node_modules/svg.screenbbox.js/dist/svg.screenbbox.min.js"></script>
         <link rel="stylesheet" type="text/css" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
         <script type="text/javascript" src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
         <link rel="stylesheet" type="text/css" href="node_modules/typopro-web/web/TypoPRO-SourceSansPro/TypoPRO-SourceSansPro.css">
