switch LESS to production, too

--- a/sample/index.html
+++ b/sample/index.html
@@ -36,7 +36,7 @@
         <script type="text/javascript" src="node_modules/mousetrap/mousetrap.min.js"></script>
         <script type="text/javascript" src="node_modules/animejs/lib/anime.min.js"></script>
         <script type="text/javascript" src="node_modules/vivus/dist/vivus.min.js"></script>
-        <script>less = { env: "development", logLevel: 0 };</script>
+        <script>less = { env: "production", logLevel: 0 };</script>
         <script type="text/javascript" src="node_modules/less/dist/less.min.js"></script>
         <script type="text/javascript" src="node_modules/runejs/rune.js"></script>
         <script type="text/javascript" src="node_modules/@svgdotjs/svg.js/dist/svg.min.js"></script>
